<resources>
    <string name="welcome">Welcome to Wetha!</string>
    <string name="app_name">Wetha</string>
    <string name="enter_City">City:</string>
    <string name="enter_State">State:</string>
    <string name="instruction">Please enter your city and state below</string>
    <string name="btn_Enter">Enter</string>
    <string name="btn_UseGps">Use location services</string>
    <string name="alternate">OR</string>
    <string name="day_temp">Day: %1$s°%2$s</string>
    <string name="night_temp">Night: %1$s°%2$s</string>
    <string name="detailed_forecast">Detailed Forecast: </string>
    <string name="city_placeholder">City</string>
    <string name="state_placeholder">State</string>
    <string name="error_network">There was a problem getting data. \nPlease try again.</string>
    <string name="error_gps">There was a problem gathering GPS data. \nPlease try again.</string>
    <string name="error_not_supported">This location may not be supported. \nPlease try another location.</string>
    <string name="retry">RETRY</string>
    <string name="currently">Currently</string>
    <string name="today">Today</string>
    <string name="tonight">Tonight</string>
    <string name="dynamicTemp">%1$s: %2$s°%3$s</string>
    <string name="tonightTemp">Tonight: %1$s°%2$s</string>
    <string name="error_empty_city">You must enter a city.</string>
    <string name="error_empty_state">You must enter a state.</string>
    <string name="done_icon_desc">Icon showing that the button\'s action is complete.</string>
</resources>