<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/pickled_blue_wood"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/weatherlogo" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/welcome"
                android:textColor="@color/mystic"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcome"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:text="@string/instruction"
                android:textColor="@color/mystic"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/inputContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/instruction"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/txtEnterCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/enter_City"
                    android:textColor="@color/mystic"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/txtEnterCity"
                    android:autofillHints="city"
                    android:backgroundTint="@color/mystic"
                    android:ems="11"
                    android:hint="@string/city_placeholder"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="@color/mystic"
                    android:textColorHint="@color/mystic" />

                <TextView
                    android:id="@+id/txtEnterState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editCity"
                    android:layout_marginTop="7dp"
                    android:text="@string/enter_State"
                    android:textColor="@color/mystic"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editCity"
                    android:layout_alignStart="@+id/editCity"
                    android:layout_toEndOf="@+id/txtEnterState"
                    android:autofillHints="state"
                    android:backgroundTint="@color/mystic"
                    android:ems="11"
                    android:hint="@string/state_placeholder"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColor="@color/mystic"
                    android:textColorHint="@color/mystic" />

                <include
                    android:id="@+id/btnEnter"
                    layout="@layout/progress_button"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_below="@+id/editState"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/txtAlternate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnEnter"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/alternate"
                    android:textColor="@color/mystic"
                    android:textSize="24sp" />

                <include
                    android:id="@+id/btnUseGps"
                    layout="@layout/progress_button"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:layout_below="@+id/txtAlternate"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="25dp" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
